tests/NormalTests/paczka1/fuzzy1/33991446.err
Error in line 3: iL8ho A313 51,5
Error in line 7: VxidLALf A313 3,6
Error in line 9: VxidLALf S148 13,0
Error in line 11: VxidLALf A313 44,8
Error in line 8: CpH1nE5OEr S148 76,8
Error in line 6: S353 S353 81,8
Error in line 16: m8O A313 93,7
Error in line 22: 0EefQdlU S353 17,8
Error in line 33: athHNX S353 48,5
